community/go: security upgrade to 1.13.8 (CVE-2020-7919)

--- a/community/go/APKBUILD
+++ b/community/go/APKBUILD
@@ -3,8 +3,8 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=go
 # go binaries are statically linked, security updates require rebuilds
-pkgver=1.13.4
-pkgrel=2
+pkgver=1.13.8
+pkgrel=0
 pkgdesc="Go programming language compiler"
 url="https://golang.org/"
 arch="all"
@@ -24,6 +24,8 @@ case "$CARCH" in
 esac
 
 # secfixes:
+#   1.13.7-r0:
+#   - CVE-2020-7919
 #   1.13.2-r0:
 #   - CVE-2019-17596
 #   1.13.1-r0:
@@ -141,6 +143,6 @@ package() {
 		-exec rm -rf \{\} \+
 }
 
-sha512sums="e8155cdceca2ebefd386feef98223bbdc92d9316f7188d4ba701cf43a723b75a9bf67a1eb92ac80987b7a113a2fb6981ef235292bec7dd3964805b7c33abdbb1  go1.13.4.src.tar.gz
+sha512sums="5df45c4701631e7a70f4f25b07ed00dc9a56bdebeb5ead2d04e0e6b000e8a9f00d193247e626ef5b1e6b7fc54bf27fbc5e8fb21b23ab52ec397f2238c5dfa000  go1.13.8.src.tar.gz
 f0c07d9979fc3165fc78158406de8440624b3f2c6f6542c9889c71efbf3d2f02a7ffee27ccba8c2630489895d331b7b9d3a606162134dcb3e8e0b9fc06b529dc  default-buildmode-pie.patch
 6ce14ca43fd35520e667530af91cfcad8902d635e6dd8c04d19428299b9e29ba049120f5eebbb00717a895f052d1cc40d3f522c090786625cce726715a8218ec  disable-flaky-sync-test.patch"
