main/zlib: mark CVE-2023-6992 as not vulnerable
the issue is specific to cloudflare's fork of zlib,
but our own secfixes tracker reports it incorrectly.
https://gitlab.alpinelinux.org/alpine/aports/-/issues/15970

(cherry picked from commit fad2d175bd85eb4c5566765375392a7394dfbcf2)

--- a/main/zlib/APKBUILD
+++ b/main/zlib/APKBUILD
@@ -18,6 +18,7 @@ source="https://zlib.net/fossils/zlib-$pkgver.tar.gz
 #     - CVE-2018-25032
 #   0:
 #     - CVE-2023-45853
+#     - CVE-2023-6992
 
 build() {
 	# we trade size for a little more speed.
