community/exim: security upgrade to 4.98.2
https://exim.org/static/doc/security/CVE-2025-30232.txt

--- a/community/exim/APKBUILD
+++ b/community/exim/APKBUILD
@@ -6,7 +6,7 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=exim
-pkgver=4.98.1
+pkgver=4.98.2
 pkgrel=0
 pkgdesc="Message Transfer Agent"
 url="https://www.exim.org/"
@@ -35,6 +35,8 @@ source="https://ftp.exim.org/pub/exim/exim4/exim-$pkgver.tar.xz
 	"
 
 # secfixes:
+#   4.98.2-r0:
+#     - CVE-2025-30232
 #   4.98-r0:
 #     - CVE-2024-39929
 #   4.97.1-r0:
@@ -161,7 +163,7 @@ dbmdb() { _mv_ext dbmdb; }
 dnsdb() { _mv_ext dnsdb; }
 
 sha512sums="
-8f80999a41ed40e86ee16eea5cfd765e2f164ea149f40eeb410fd02fcf35c23317dc69540efe336e9e0fae930b1cc6771e0180dd70f1314531cdb139740c744e  exim-4.98.1.tar.xz
+aaa4cfc8aee90818c6d1c2fd0cf64b82668d1a343f462f678b38b2b79e10a467240f2e81786eec7705eec3598d23686a74437c50b68502f29ff67788393c812a  exim-4.98.2.tar.xz
 6ea7670e30815807272d1d9033e75836b883cb2f14f05f0d38aa3f8aecd2516c0763a29f71267b6380f9e606156c889a5c77d444545769af68baaffb80d0dac7  bounce-charset.patch
 198224ca544c2780c5d8106bb74304d871dcfde7d90707291d7e478b8950efe33488accfd896cb86b1a5b4f32ae6040ac0c44907f1b0843ef64037bea55f5e66  exim.Makefile
 bb6f5ead067af19ace661cc92bcd428da97570aedd1f9dc5b61a34e7e3fb3e028be6c96d51df73353bdfcaf69a3ee053fb03d245f868d63ebf518aa96ec82d66  exim.confd
