--- a/community/synapse/APKBUILD
+++ b/community/synapse/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: 6543 <6543@obermui.de>
 # Maintainer: jahway603 <jahway603@protonmail.com>
 pkgname=synapse
-pkgver=1.126.0
+pkgver=1.127.1
 pkgrel=0
 pkgdesc="Matrix reference homeserver"
 url="https://github.com/element-hq/synapse"
@@ -74,6 +74,8 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/element-hq/synapse/archive/v
 options="net !check" # need updates for new jsonschema
 
 # secfixes:
+#   1.127.1-r0:
+#     - CVE-2025-30355
 #   1.120.2-r0:
 #     - CVE-2024-52805
 #     - CVE-2024-52815
@@ -158,7 +160,7 @@ package() {
 }
 
 sha512sums="
-c97d9110b800995413c97884002f70f08c095d063adbd6baf1b13065ed9c0768a8573105031104937fadb7c710eca58a81058a315785c2d787c75da66f3183a9  synapse-1.126.0.tar.gz
+d469bc7e7c6b8f0554e5f4d40cba775ca865157815948e13a1bcf51fc11fd2e73ac36e87f2e632126625b96dda088cf92f4f6952b3e92d9ecaa8d5e2af85882c  synapse-1.127.1.tar.gz
 80b32fc482578470692228d2258da858e06703ba2a4aed895c506101976a569d03b02c0bbf9ce911c27d14f3001e1a64539a8fd3643a796cb366d01f5a051fef  synapse.initd
 7c022f0e00c8ac363d6d2e003b6389fb06a3934f68390ebac156cb46bc1366585e6b6cda07b15176bc62a00f5bf21bfda153ff5418b07331257a7075102a6f83  synapse.confd
 "
