testing/anubis: security upgrade to 1.15.2
https://github.com/TecharoHQ/anubis/releases/tag/v1.15.0

https://github.com/TecharoHQ/anubis/releases/tag/v1.15.1

https://github.com/TecharoHQ/anubis/releases/tag/v1.15.2

- CVE-2025-24369

--- a/testing/anubis/APKBUILD
+++ b/testing/anubis/APKBUILD
@@ -1,6 +1,6 @@
 maintainer="fossdd <fossdd@pwned.life>"
 pkgname=anubis
-pkgver=1.14.2
+pkgver=1.15.2
 pkgrel=0
 pkgdesc="Block AI scrapers using a sha256 proof-of-work challenge"
 url="https://github.com/TecharoHQ/anubis"
@@ -10,6 +10,10 @@ makedepends="go"
 subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/TecharoHQ/anubis/archive/refs/tags/v$pkgver.tar.gz"
 options="net" # go modules
+
+# secfixes:
+#   1.15.2-r0:
+#     - CVE-2025-24369
 
 build() {
 	go build ./cmd/anubis
@@ -25,5 +29,5 @@ package() {
 }
 
 sha512sums="
-9c6b8f7598875c0d9dcfbd7c3a2db29df5c78f41827c0d813f59e7543957e2ffe4290247028f4f877e984de091fc0e0d056f9d56ae7e609adbca260bbfb520e0  anubis-1.14.2.tar.gz
+53b3b9b19e4445d8116f68f446d7dbf8bdde70c3741661c0d9897afdd74bfd20b81b35ed2ff956f4d8363a4ec4ce8e7617c9c240d739ac5e04d41cc3a144c4e7  anubis-1.15.2.tar.gz
 "
