--- a/main/xz/APKBUILD
+++ b/main/xz/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=xz
 pkgver=5.6.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Library and CLI tools for XZ and LZMA compressed files"
 url="https://tukaani.org/xz/"
 arch="all"
@@ -10,9 +10,13 @@ license="GPL-2.0-or-later AND 0BSD AND Public-Domain AND LGPL-2.1-or-later"
 makedepends="autoconf automake libtool gettext-tiny"
 depends_dev="$pkgname=$pkgver-r$pkgrel"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-libs"
-source="https://github.com/tukaani-project/xz/archive/refs/tags/v$pkgver/xz-$pkgver.tar.gz"
+source="https://github.com/tukaani-project/xz/archive/refs/tags/v$pkgver/xz-$pkgver.tar.gz
+	CVE-2025-31115.patch
+	"
 
 # secfixes:
+#   5.6.3-r1:
+#     - CVE-2025-31115
 #   5.2.5-r1:
 #     - CVE-2022-1271
 #   5.6.1-r2:
@@ -58,4 +62,5 @@ package() {
 
 sha512sums="
 0f814f4282c87cb74a8383199c1e55ec1bf49519daaf07f7b376cb644770b75cc9257c809b661405fcfd6cda28c54d799c67eb9e169665c35b1b87529468085e  xz-5.6.3.tar.gz
+2faa5ba2906d02656145dcf4090f925e75456e3d163bc074f6b05538679cbe14d177f9d6723f48bd046bdec3dae6d1b7d89b007d0e880495ea46d387612a1b02  CVE-2025-31115.patch
 "
