--- a/main/xz/APKBUILD
+++ b/main/xz/APKBUILD
@@ -2,16 +2,20 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=xz
 pkgver=5.4.5
-pkgrel=0
+pkgrel=1
 pkgdesc="Library and CLI tools for XZ and LZMA compressed files"
 url="https://tukaani.org/xz"
 arch="all"
 license="GPL-2.0-or-later AND Public-Domain AND LGPL-2.1-or-later"
 depends_dev="$pkgname=$pkgver-r$pkgrel"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-libs"
-source="https://tukaani.org/xz/xz-$pkgver.tar.xz"
+source="https://tukaani.org/xz/xz-$pkgver.tar.xz
+	CVE-2025-31115.patch
+	"
 
 # secfixes:
+#   5.4.5-r1:
+#     - CVE-2025-31115
 #   5.2.5-r1:
 #     - CVE-2022-1271
 
@@ -50,4 +54,5 @@ package() {
 
 sha512sums="
 5cbc3b5bb35a9f5773ad657788fe77013471e3b621c5a8149deb7389d48535926e5bed103456fcfe5ecb044b236b1055b03938a6cc877cfc749372b899fc79e5  xz-5.4.5.tar.xz
+2faa5ba2906d02656145dcf4090f925e75456e3d163bc074f6b05538679cbe14d177f9d6723f48bd046bdec3dae6d1b7d89b007d0e880495ea46d387612a1b02  CVE-2025-31115.patch
 "
