--- a/main/xz/APKBUILD
+++ b/main/xz/APKBUILD
@@ -2,16 +2,20 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=xz
 pkgver=5.4.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Library and CLI tools for XZ and LZMA compressed files"
 url="https://tukaani.org/xz"
 arch="all"
 license="GPL-2.0-or-later AND Public-Domain AND LGPL-2.1-or-later"
 depends_dev="$pkgname=$pkgver-r$pkgrel"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-libs"
-source="https://tukaani.org/xz/xz-$pkgver.tar.xz"
+source="https://tukaani.org/xz/xz-$pkgver.tar.xz
+	CVE-2025-31115.patch
+	"
 
 # secfixes:
+#   5.4.3-r1:
+#     - CVE-2025-31115
 #   5.2.5-r1:
 #     - CVE-2022-1271
 
@@ -50,4 +54,5 @@ package() {
 
 sha512sums="
 7252191339afb97fc6a00616b1a8b9f24247d3539e7dbffca2045954593ae3e20d59e34f24c03b1954c96fbfa9cc8a7fea2a6e501e837872f90e8cd8bb307bb5  xz-5.4.3.tar.xz
+2faa5ba2906d02656145dcf4090f925e75456e3d163bc074f6b05538679cbe14d177f9d6723f48bd046bdec3dae6d1b7d89b007d0e880495ea46d387612a1b02  CVE-2025-31115.patch
 "
