community/pdns-recursor: security upgrade to 5.2.1 (CVE-2025-30195)

--- a/community/pdns-recursor/APKBUILD
+++ b/community/pdns-recursor/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Peter van Dijk <peter.van.dijk@powerdns.com>
 pkgname=pdns-recursor
-pkgver=5.2.0
+pkgver=5.2.1
 pkgrel=0
 pkgdesc="PowerDNS Recursive Server"
 url="https://www.powerdns.com/"
@@ -41,6 +41,8 @@ loongarch64|ppc64le|riscv64)
 esac
 
 # secfixes:
+#   5.2.1-r0:
+#     - CVE-2025-30195
 #   5.1.2-r0:
 #     - CVE-2024-25590
 #   5.0.4-r0:
@@ -162,7 +164,7 @@ luajit() {
 }
 
 sha512sums="
-00b1d9a837d2e854750a90f6306d3a7d7b23cf96dd0897666034f120d2c57f1277e1bc1677b8b54eec804f8983483208e3d2e4f156ca376374d06f3d73e3abd0  pdns-recursor-5.2.0.tar.bz2
+f75d1a8fb7ae6588c2531706cb6c889aa161c945292b971cecb8b07abc3794aa1ef464e2a88f2f335e8e3b387bda266064b216c07450f43b5548de0b75bbe9a4  pdns-recursor-5.2.1.tar.bz2
 71f7be51d3a9a78f22f3946e95534d4f5b37b3bcbd1891ad3a17095be545fdb0eaf239d58c9f40ccc642542150c0b35ed025bf69acabfa779c0ab10c67a5e796  pdns-recursor.initd
 4bd244afe3ca888292eb1a9528b6f308ef7c131626f2e62a7b58e381710c392c671f96bb4932be52bb4213e58c349ed3ae9cf9ddf13fd92d6a43150ab4b54b11  recursor.conf
 "
