main/perl: patch CVE-2024-56406

--- a/main/perl/APKBUILD
+++ b/main/perl/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Valery Kartel <valery.kartel@gmail.com>
 pkgname=perl
 pkgver=5.36.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Larry Wall's Practical Extraction and Report Language"
 url="https://www.perl.org/"
 arch="all"
@@ -20,6 +20,7 @@ source="https://www.cpan.org/src/5.0/perl-$pkgver.tar.gz
 	default-https-perl-http-tiny.patch
 	zlib-no-zsolo.patch
 	release_status.patch
+	CVE-2024-56406.patch
 	"
 # Tests too slow, and some failures on mips64.
 [ "$CARCH" = "mips64" ] && options="$options !check"
@@ -30,6 +31,8 @@ provides="
 	"
 
 # secfixes:
+#   5.36.2-r1:
+#     - CVE-2024-56406
 #   5.36.2-r0:
 #     - CVE-2023-47038
 #   5.34.0-r1:
@@ -194,4 +197,5 @@ c004d6612ec754e5947255a2e2d15b5581f187c32495aeeec9f4fa286919bd9f40c72b63db61e3f4
 fc68c37db1bc6f8b2407ea3cd3179001046a0960943a165e5d3f855ab5317171be975d4e800657179ca3e362837b1dd31a95f7413228ac900900e29f0ffe2cfd  default-https-perl-http-tiny.patch
 4d7a4a199af08f08ef174c1117120a0ac8f7272bc981de2038dc4e1a429674e94c552e1af13326a837b0fe664dbf75d4528467e2a8c1b9d3f9bb2c61c112ae14  zlib-no-zsolo.patch
 eab8a01c2e36402e8b9db70db61c1bd8677ae8345fe09b62670440dceb58e8a6920da28175809901f8caf64244ddd7625be1320670097e6d0638086cbabc4220  release_status.patch
+45bc05ea9efa9e527ecff4a4796b97fa34cbdf86e736d968c7cca90b372f2b7f4f351b577e4d61d71d6250088735bbf193e757467dc29c568fbc4c15baef9aba  CVE-2024-56406.patch
 "
