--- a/main/sqlite/APKBUILD
+++ b/main/sqlite/APKBUILD
@@ -4,7 +4,7 @@
 pkgname=sqlite
 # NOTE: pkgver needs to correspond with sqlite-tcl
 pkgver=3.45.3
-pkgrel=1
+pkgrel=2
 pkgdesc="C library that implements an SQL database engine"
 url="https://www.sqlite.org/"
 arch="all"
@@ -32,9 +32,12 @@ _ver=${_a}${_b}${_c}$_d
 builddir="$srcdir/$pkgname-autoconf-$_ver"
 source="https://www.sqlite.org/2024/sqlite-autoconf-$_ver.tar.gz
 	$pkgname-$_ver-LICENSE.md::https://www.sqlite.org/src/raw?name=LICENSE.md&ci=version-$pkgver
+	CVE-2025-29087.patch
 	"
 
 # secfixes:
+#   3.45.3-r2:
+#     - CVE-2025-29087
 #   3.34.1-r0:
 #     - CVE-2021-20227
 #   3.32.1-r0:
@@ -114,4 +117,5 @@ package() {
 sha512sums="
 ab4bb99186ccf81d288bc5150dacd5f8a32561303fbc0c607c24b5bb5ad44e0974655cea57d05122c62e957329f5260d170d2a71cbcf818501af29903c99a391  sqlite-autoconf-3450300.tar.gz
 8a347c292363e55a8c0fa0321e3f399bfe9c9aedcb6c838123f0eb3e2a4e078d096b7c152a4981e18ee9fa50c4ef913a33ed840aeed33aee0a46e95cd17f0814  sqlite-3450300-LICENSE.md
+bcaba44c539658de959784be130ec4e6f471fab9c7465242b96474243499f07350d22084f2b8903607d523bc6804774985f09dc36af94a736355692e63ee85de  CVE-2025-29087.patch
 "
