--- a/main/sqlite/APKBUILD
+++ b/main/sqlite/APKBUILD
@@ -5,7 +5,7 @@ maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=sqlite
 # NOTE: pkgver needs to correspond with sqlite-tools
 pkgver=3.48.0
-pkgrel=0
+pkgrel=1
 pkgdesc="C library that implements an SQL database engine"
 url="https://www.sqlite.org/"
 arch="all"
@@ -33,9 +33,12 @@ _ver=${_a}${_b}${_c}$_d
 builddir="$srcdir/$pkgname-autoconf-$_ver"
 source="https://www.sqlite.org/2025/sqlite-autoconf-$_ver.tar.gz
 	$pkgname-$_ver-LICENSE.md::https://www.sqlite.org/src/raw?name=LICENSE.md&ci=version-$pkgver
+	CVE-2025-29087.patch
 	"
 
 # secfixes:
+#   3.48.0-r1:
+#     - CVE-2025-29087
 #   3.34.1-r0:
 #     - CVE-2021-20227
 #   3.32.1-r0:
@@ -116,4 +119,5 @@ package() {
 sha512sums="
 c607cbc58cdef6910a87ddb6ae8aeabdab2769d6cc33aad04f31fc428ecc5a8eaf19f5d3a3590591aae2c920b106a684891d38efef712f91631602245f6f4d3d  sqlite-autoconf-3480000.tar.gz
 38844727b09d11ded660c069d19a5289100405b0b243e75338060d237e3190fd99f0270611d214862beeb54a67993c2a337f917fdc452084f812d1371ce9869b  sqlite-3480000-LICENSE.md
+bcaba44c539658de959784be130ec4e6f471fab9c7465242b96474243499f07350d22084f2b8903607d523bc6804774985f09dc36af94a736355692e63ee85de  CVE-2025-29087.patch
 "
