community/yelp: patch CVE-2025-3155
https://blogs.gnome.org/mcatanzaro/2025/04/15/dangerous-arbitrary-file-read-vulnerability-in-yelp-cve-2025-3155/

--- a/community/yelp/APKBUILD
+++ b/community/yelp/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: team/gnome <pabloyoyoista@postmarketos.org>
 pkgname=yelp
 pkgver=42.2
-pkgrel=3
+pkgrel=4
 pkgdesc="Help browser for GNOME desktop"
 url="https://wiki.gnome.org/Apps/Yelp"
 arch="all"
@@ -22,7 +22,13 @@ makedepends="
 	xz-dev
 	"
 subpackages="$pkgname-static $pkgname-dev $pkgname-lang"
-source="https://download.gnome.org/sources/yelp/${pkgver%.*}/yelp-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/yelp/${pkgver%.*}/yelp-$pkgver.tar.xz
+	CVE-2025-3155.patch
+	"
+
+# secfixes:
+#   42.2-r4:
+#     - CVE-2025-3155
 
 prepare() {
 	default_prepare
@@ -61,4 +67,5 @@ package() {
 
 sha512sums="
 7fd8da347b3cdb9b24a31eebe14c4964c5e41956caa2b79e70d6ea0c829d94f8428bbd96a2472c02d56673ca0ed1c75f7c6f874a59c4eea0b1440918a99969f4  yelp-42.2.tar.xz
+8c793bece06c9606b0736da124b95e5997949bf33d95860edba0b7504e65b8160c4fde41940def5703eb48821fd49684bfa69b48f58b6aec072c97881016d3d0  CVE-2025-3155.patch
 "
