community/yelp-xsl: patch CVE-2025-3155
https://blogs.gnome.org/mcatanzaro/2025/04/15/dangerous-arbitrary-file-read-vulnerability-in-yelp-cve-2025-3155/

--- a/community/yelp-xsl/APKBUILD
+++ b/community/yelp-xsl/APKBUILD
@@ -3,14 +3,20 @@
 # Maintainer: team/gnome <alacerda@alpinelinux.org>
 pkgname=yelp-xsl
 pkgver=42.1
-pkgrel=1
+pkgrel=2
 pkgdesc="XSL stylesheets for the yelp help browser"
 url="https://wiki.gnome.org/Apps/Yelp"
 arch="noarch"
 license="GPL-2.0-or-later AND LGPL-2.1-or-later AND MIT"
 makedepends="intltool libxslt itstool"
 options="!check" # no tests
-source="https://download.gnome.org/sources/yelp-xsl/${pkgver%.*}/yelp-xsl-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/yelp-xsl/${pkgver%.*}/yelp-xsl-$pkgver.tar.xz
+	CVE-2025-3155.patch
+	"
+
+# secfixes:
+#   42.1-r2:
+#     - CVE-2025-3155
 
 prepare() {
 	default_prepare
@@ -38,4 +44,5 @@ package() {
 
 sha512sums="
 90c7cc244dba038d6fcc1344adf950640a0affb8e5a1a6945a776d3308bf9b5071320856968f7a31688855a18a872f63553bd643b7776801cc68b182b455fc10  yelp-xsl-42.1.tar.xz
+ddc6f0eb23b99b2dd6f1b21d12b326304ed0ae3b0101cd1d3d9fe424d58637219c9098b7b7fedc17455f91e21cc0fe23c081e38ce4fc8d591e9b9d863b48cfff  CVE-2025-3155.patch
 "
