--- a/community/erlang/APKBUILD
+++ b/community/erlang/APKBUILD
@@ -9,7 +9,7 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=erlang
-pkgver=26.2.5.5
+pkgver=26.2.5.11
 pkgrel=0
 pkgdesc="General-purpose programming language and runtime environment"
 url="https://www.erlang.org/"
@@ -52,6 +52,8 @@ case "$CTARGET_ARCH" in
 esac
 
 # secfixes:
+#   26.2.5.11-r0:
+#     - CVE-2025-32433
 #   26.2.1-r0:
 #     - CVE-2023-48795
 #   25.0.3-r0:
@@ -180,5 +182,5 @@ verifydeps() {
 }
 
 sha512sums="
-3352fe57a246ef0696740710509558fefebdd223d75558a3641220d432d022bfa7241676756c7092cd553ce4e9aac88fd821394344165843cc9b45e5eba581ac  otp_src_26.2.5.5.tar.gz
+fa5c4a830544b6b26ec738d81569548ac063827fcc9865040eaa12d6e12a9a81698c50d5ae9b9f7a2aa454597ba53e5834b1993ff4bdfbeebbb69efbdc00b145  otp_src_26.2.5.11.tar.gz
 "
