--- a/main/subversion/APKBUILD
+++ b/main/subversion/APKBUILD
@@ -1,9 +1,8 @@
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=subversion
-pkgver=1.14.4
+pkgver=1.14.5
 pkgrel=0
-_py3c_ver=1.4
 pkgdesc="Replacement for CVS, another versioning system (svn)"
 url="https://subversion.apache.org/"
 arch="all"
@@ -42,6 +41,8 @@ source="https://archive.apache.org/dist/subversion/subversion-$pkgver.tar.bz2
 	"
 
 # secfixes:
+#   1.14.5-r0:
+#     - CVE-2024-46901
 #   1.14.4-r0:
 #     - CVE-2024-45720
 #   1.14.2-r0:
@@ -141,7 +142,7 @@ tools() {
 }
 
 sha512sums="
-f5e104ef20c96f2605965fafeb9245b03c722734031c2c8d2b6f996979624566ac0a5dadc2d37274a360f2b1dbecb9f7149d0a43c23c2616b9176d0b9367c924  subversion-1.14.4.tar.bz2
+e4800564d0cc68be98f19aa58d89181de83f237f0ccff10824d9237f8c65eb0071f7176ac54e9e8f8ecbf685849bd3e94be48f678f4c23ed6a5fd7fb6edd0321  subversion-1.14.5.tar.bz2
 fb219c45b80602d919176cc191394df09f90d0f5c7d24e6a36b166bd92777ecae67eeac1e49c0ffbb0e724396b3d2094dbb0bef17d01dc87d418b1cd554bd7c4  subversion-1.7.0-deplibs.patch
 fd6e5f45cff4d3cf0d885a34c822b32141b13b199d99ad8e1b04d641c9c1ee27e73f5c556a4ad54a900b6d39cc14afad17b6738d8af44c76758f1a27b4d49f9a  subversion-perl-deplibs.patch
 7d46f2ee0bbba53b6dc9312b35000b1433a46edb09f61030da1ff66951bc204fc90598e5b07ce2554d46508d5a9e8193152131ae21050901c7b40cb034fb5cc3  subversion-1.12.0-linking.patch
