community/thttpd: fix CVE-2012-5640

--- a/community/thttpd/APKBUILD
+++ b/community/thttpd/APKBUILD
@@ -21,7 +21,11 @@ source="http://www.acme.com/software/$pkgname/$pkgname-$pkgver.tar.gz
 	remove_transfer_encoding.patch
 	thttpd-makeweb-notsuid.patch
 	install-user.patch
+	CVE-2012-5640.patch
 	"
+# secfixes:
+#   2.29-r5:
+#     - CVE-2012-5640
 
 prepare() {
 	default_prepare
@@ -81,4 +85,5 @@ e02ed5b889eb3c875d56503093777c542316165a8df2d83e539337fb0759b6d9728fd484123dd903
 6536ae6c25dbf79aec43e3d0596ad135ab3ab6e7cd3a5e3c895a289114c08c03c20357ffb4542decfc4d508039a5045db71fb36002c8ba94dbd6356cad32bae4  remove_transfer_encoding.patch
 1138a827049f73b43ce142c914fad0670bcd4577de16485ade024314c616056ab6789897663d8b6592331354d44065eae7aa712e20f5c930a80513448416fa17  thttpd-makeweb-notsuid.patch
 9b674b108961289d8869c31978a4c1822de54377d7a35907ae29d47ab2f5003d760f2970dec3bc11780f116d8f3c532f6726b76e0ebf1d0a89c85ce3eb0963ba  install-user.patch
+fab46474c0e82df147de6c6d4366661fe2df18f3ca0a8bb874f27c14f522349505647c935461f4f9181c6fd6842e368be5d2894646709c337d72096ab5d67ef1  CVE-2012-5640.patch
 "
