--- a/community/dnsdist/APKBUILD
+++ b/community/dnsdist/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Peter van Dijk <peter.van.dijk@powerdns.com>
 pkgname=dnsdist
-pkgver=1.9.7
+pkgver=1.9.9
 pkgrel=0
 pkgdesc="dnsdist is a highly DNS-, DoS-, and abuse-aware loadbalancer."
 url="https://dnsdist.org/"
@@ -43,6 +43,8 @@ ppc64le|riscv64|loongarch64)
 esac
 
 # secfixes:
+#   1.9.9-r0:
+#     - CVE-2025-30194
 #   1.9.4-r0:
 #     - CVE-2024-25581
 
@@ -130,5 +132,5 @@ luajit() {
 }
 
 sha512sums="
-7d49136efd811d10e86e5df2e4972fdd31245686294efe618107ebb80e13762a0f9a5677af59277484a7b69a05c84bbc6b26f8fabbdcc34acdfcdd7e7b155aac  dnsdist-1.9.7.tar.bz2
+addd72f5324d75811601d9efe7af8846a448694172a14066b3ae53c7e53195f6955a038f97411703f66ce6bafd02846bf3c679839c473de6f7fc9ebecb8e6ca9  dnsdist-1.9.9.tar.bz2
 "
