main/redis: patch CVE-2025-21605

--- a/main/redis/APKBUILD
+++ b/main/redis/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: TBK <alpine@jjtc.eu>
 pkgname=redis
 pkgver=7.0.15
-pkgrel=2
+pkgrel=3
 pkgdesc="Advanced key-value store"
 url="https://redis.io/"
 arch="all"
@@ -26,6 +26,7 @@ source="https://download.redis.io/releases/redis-$pkgver.tar.gz
 	CVE-2024-31449.patch
 	CVE-2024-46981.patch
 	CVE-2024-51741.patch
+	CVE-2025-21605.patch
 	"
 # flaky tests are sometimes blocking these builders
 case "$CARCH" in
@@ -33,6 +34,8 @@ ppc64le|s39x) options="!check" ;;
 esac
 
 # secfixes:
+#   7.0.15-r3:
+#     - CVE-2025-21605
 #   7.0.15-r2:
 #     - CVE-2024-46981
 #     - CVE-2024-51741
@@ -130,4 +133,5 @@ bf2def2077a989047e9bfff8a7f754bcdf96e020fd4a470f8967ee1fca601e11f044cfb3742f00e9
 a320ab06edb88c7268f9c04218c13495b4862f82a90334d157b9d659b123ffff24e46f9cbcbcf139d0a66db3187d08f7dbc6cd20f55e9a0c634000016b61df4b  CVE-2024-31449.patch
 454e5eaf3c093dbaf00072415e0568a62396ae67c95756db75ac81ad43441a853f95c27a5c094a44d95585176f58825d036a9504efdfa065dd494aa7f1f767af  CVE-2024-46981.patch
 614ad51f4386372d8f5d4b2c713cbf60c04b7b3035eee21f73ef28bee396e03ff0c807c7e3259ba8353c6cfe9099370a80c8cce9d970c1c3e8f94bb1e1263c2a  CVE-2024-51741.patch
+3919551d27eebc8569691a324e1b6da58a2e684dc9805db03bc872e37d7ac2d7509eddba1b022b20f46c1eb2b152467aa1f9c99130883518f8986a32d8fc69ab  CVE-2025-21605.patch
 "
