--- a/main/mariadb/APKBUILD
+++ b/main/mariadb/APKBUILD
@@ -7,8 +7,8 @@
 # Contributor: Jake Buchholz <tomalok@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mariadb
-pkgver=11.4.5
-pkgrel=2
+pkgver=11.4.6
+pkgrel=0
 pkgdesc="A fast SQL database server"
 url="https://www.mariadb.org/"
 pkgusers="mysql"
@@ -85,10 +85,15 @@ source="https://rsync.osuosl.org/pub/mariadb/mariadb-$pkgver/source/mariadb-$pkg
 	lfs64.patch
 	disable-failing-test.patch
 	have_stacktrace.patch
-	libfmt.patch
 	"
 
 # secfixes:
+#   11.4.6-r0:
+#     - CVE-2025-30722
+#     - CVE-2025-30693
+#     - CVE-2023-52970
+#     - CVE-2023-52969
+#     - CVE-2023-52971
 #   11.4.5-r0:
 #     - CVE-2025-21490
 #   10.11.8-r0:
@@ -560,11 +565,10 @@ _plugin_rocksdb() {
 }
 
 sha512sums="
-65b74e5443c2b7e8bc6a4c2a22838e3440bdbfef9c8fa6ed2b142e3ed0121d77a049c1054b05859ff8232386894ae0e7429d1a646ecf503e9c01c4952c83c51a  mariadb-11.4.5.tar.gz
+475e4197c785efd9d5cb5d285e93457d6c53ba1f8715e3d89c596bb521e25e9613f8fc0a94ef6959f32e7e314dbd0320c457478c611f027750949d6668ebb013  mariadb-11.4.6.tar.gz
 c352969f6665b0ffa387f7b185a5dea7751f4b16c12c809627857b27321efa09159369d7dd5c852d6159a9f173cb895fb601f0c52a1fa6e3527899520030964c  mariadb.initd
 ec9068ee1da8276f04ac3654640cb6149e0f0a21ee77b133d7e5b82fa2ab2fd7971bce6ea3c5a5e094d8c6e2571f4ce43d7014b2767bb27e0a335005ced81968  gcc13.patch
 cccaa99917913f5f08204464e7fb9865e30760a1933ff240c0035271f831058d2ea4ada867da164309bfc91f6b564ec13bb290900d90c3697866971c7666f91b  lfs64.patch
 7b4024818c8bb04fe5916905ceee79e93e24ee8c6d51593031967a106d1c001f2127a81acbbbb06aa4bb676ea00281a1cba03df7987177d97e7abe07efd7188f  disable-failing-test.patch
 4965275371e6d5e08e32a16fcfff2e68dfdcf6f4c30e5beffe18dcf56b503cbf373feeda814694e048964b16165ad65156c32fe27e974bed47201e8cf60736c6  have_stacktrace.patch
-330f8a51af6e7ad1ae024d5a45478c148ce1cd80febe4348dd0f432cfd3cef9080317af7025ad7865563c854ebffc80582b3d31412fba53cd3f4d3738c62a975  libfmt.patch
 "
