main/redis: security upgrade to 6.2.18
https://github.com/redis/redis/blob/6.2.18/00-RELEASENOTES

- CVE-2025-21605
- CVE-2024-46981
- CVE-2024-31449
- CVE-2024-31228

Closes https://gitlab.alpinelinux.org/alpine/aports/-/issues/17143

--- a/main/redis/APKBUILD
+++ b/main/redis/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Eivind Uggedal <eu@eju.no>
 # Maintainer: TBK <alpine@jjtc.eu>
 pkgname=redis
-pkgver=6.2.14
+pkgver=6.2.18
 pkgrel=0
 pkgdesc="Advanced key-value store"
 url="https://redis.io/"
@@ -26,6 +26,11 @@ source="https://download.redis.io/releases/redis-$pkgver.tar.gz
 options="!check"
 
 # secfixes:
+#   6.2.18-r0:
+#     - CVE-2025-21605
+#     - CVE-2024-46981
+#     - CVE-2024-31449
+#     - CVE-2024-31228
 #   6.2.14-r0:
 #     - CVE-2023-45145
 #   6.2.9-r0:
@@ -95,7 +100,7 @@ package() {
 }
 
 sha512sums="
-140d4b23c20d459b65be8c61996e281222f978b51c52cb048039d741801e4027775ad89ed354dc0dce3d47703a08610adafaf6253fea2f973d5b9d20bc1e59ce  redis-6.2.14.tar.gz
+124f5935fb76f1198bcffcb8fec04794cd9a752b2395fea6be4ddbc89fa2e6a9e8659683821dd92a1a9afa5e020334b08574edd8ca00504361954d0a5186a816  redis-6.2.18.tar.gz
 7725486329f2aba8fe03a768f6d8ab78cc96ab6f2ca403af56c252ef7978f7628b580587b372969ca5dd6257780ef58571ce6dc5aca468c3b2a299033b41047f  redis.conf.patch
 a5dc411c2bd7edf61400e29accb375275dd888fda72a8f7e3889be475010c695a22f536be818ef9441e47285c00b451966db924362a7f56806586078c9e3ff8c  sentinel.conf.patch
 f6dcdad1edd6b5fb6aa28ba774bfc8aba035f316695da261fb2ad291b76f00f177479f9d74434d06c26bd15f131edc9a2f55c9880758cf0987800d2031069738  redis.initd
