main/libxml2: patch CVE-2025-32414 & CVE-2025-32415
Closes https://gitlab.alpinelinux.org/alpine/aports/-/issues/17147

--- a/main/libxml2/APKBUILD
+++ b/main/libxml2/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Carlo Landmeter <clandmeter@alpinelinux.org>
 pkgname=libxml2
 pkgver=2.13.4
-pkgrel=5
+pkgrel=6
 pkgdesc="XML parsing library, version 2"
 url="https://gitlab.gnome.org/GNOME/libxml2"
 arch="all"
@@ -23,9 +23,14 @@ source="https://download.gnome.org/sources/libxml2/${pkgver%.*}/libxml2-$pkgver.
 	CVE-2024-56171.patch
 	CVE-2025-24928.patch
 	CVE-2025-27113.patch
+	CVE-2025-32414.patch
+	CVE-2025-32415.patch
 	"
 
 # secfixes:
+#   2.13.4-r6:
+#     - CVE-2025-32414
+#     - CVE-2025-32415
 #   2.13.4-r5:
 #     - CVE-2025-27113
 #   2.13.4-r4:
@@ -122,4 +127,6 @@ e7f1cd7f961647084c8b8bd1e1ab35389e74cd66d0125413181261ce0d83a51ea2d617e4fc77d664
 5ccbf396390a909669fcc54686ac604a91e4c128d52815765d67c056ec678d8c7a42547012961dc7bde5f62061ee82ad262a5d77ba843e9c737eec046202dd4d  CVE-2024-56171.patch
 bad1d78fbe3af1e849254c1acc46fef355beebe6e3bdcb9151e2d28d0e9d827a9be02b0a34b82d20aa8fcd510f9ff6e2dfbea8b2e151d5f6a3f60a9e87286521  CVE-2025-24928.patch
 d00aafe4ae1a9f30fea22058c640932e6ce4df295c42c21f099743a79e05c22ad82f5cb3e7f5bbb46ef1c8762faa2699e3afcf53a073746ae51ac55aa70aae35  CVE-2025-27113.patch
+e953afdb31310b534510ce42c09acde9deef95d0592fa4bb9bea581025e9a3af3b30a9a018fbdafce2b8c62751c629cc98f97da38025a81bdbd4508645b0ddf9  CVE-2025-32414.patch
+9c08eb84838447ce74810d4b8c3e5460bd2de2e94dbaca201480a437094bbcd5a66c61da9a2be948587ec5bebf39e35aca5d358c18477a752a4362f126ddd838  CVE-2025-32415.patch
 "
