community/erlang: security upgrade to 26.2.5.12
CVE-2025-46712

--- a/community/erlang/APKBUILD
+++ b/community/erlang/APKBUILD
@@ -9,7 +9,7 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=erlang
-pkgver=26.2.5.11
+pkgver=26.2.5.12
 pkgrel=0
 pkgdesc="General-purpose programming language and runtime environment"
 url="https://www.erlang.org/"
@@ -52,6 +52,8 @@ case "$CTARGET_ARCH" in
 esac
 
 # secfixes:
+#   26.2.5.12-r0:
+#     - CVE-2025-46712
 #   26.2.5.11-r0:
 #     - CVE-2025-32433
 #   26.2.1-r0:
@@ -182,5 +184,5 @@ verifydeps() {
 }
 
 sha512sums="
-fa5c4a830544b6b26ec738d81569548ac063827fcc9865040eaa12d6e12a9a81698c50d5ae9b9f7a2aa454597ba53e5834b1993ff4bdfbeebbb69efbdc00b145  otp_src_26.2.5.11.tar.gz
+b196fcb47e547cca902b8d4cc4fbe1c33e1e5d765c94bd74d0f58879cc7a5b499bcf8c12358981ff0cb809b5fa3f4fdb86d3d91f14c5a66a252d3eb1fb6ab959  otp_src_26.2.5.12.tar.gz
 "
