main/libxml2: upgrade to 2.12.10
https://gitlab.gnome.org/GNOME/libxml2/-/releases/v2.12.10

- CVE-2025-24928
- CVE-2024-56171

--- a/main/libxml2/APKBUILD
+++ b/main/libxml2/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Carlo Landmeter <clandmeter@alpinelinux.org>
 # Maintainer: Carlo Landmeter <clandmeter@alpinelinux.org>
 pkgname=libxml2
-pkgver=2.12.7
-pkgrel=2
+pkgver=2.12.10
+pkgrel=0
 pkgdesc="XML parsing library, version 2"
 url="https://gitlab.gnome.org/GNOME/libxml2"
 arch="all"
@@ -18,13 +18,12 @@ if [ -z "$BOOTSTRAP" ]; then
 else
 	_py_configure="--with-python=no"
 fi
-source="https://download.gnome.org/sources/libxml2/${pkgver%.*}/libxml2-$pkgver.tar.xz
-	CVE-2024-56171.patch
-	CVE-2025-24928.patch
-	CVE-2025-27113.patch
-	"
+source="https://download.gnome.org/sources/libxml2/${pkgver%.*}/libxml2-$pkgver.tar.xz"
 
 # secfixes:
+#   2.12.7-r3:
+#     - CVE-2025-32414
+#     - CVE-2025-32415
 #   2.12.7-r2:
 #     - CVE-2025-27113
 #   2.12.7-r1:
@@ -115,8 +114,5 @@ utils() {
 }
 
 sha512sums="
-88b5f3e0a7c6704926e662a46ba0606d901efbcd70a36bd39fe034e29ee42d66d7296358761e04272c9696192a1380bda55852b2a0b14a05a7a083a08e125f5f  libxml2-2.12.7.tar.xz
-a838784e17d48df7781e7f38ac57283cf9b4272d68bfa33f31eab2ed425f33b96673802782b6792fc52af7054c5d696fe335079f24d9af7c4820b9a3690547df  CVE-2024-56171.patch
-58c37e014f787444990692682546b5a3f75217cf9017399065838155cdca528e74df74be391859712a3f6ef8ee922461d5189f256bf55e3e07b9b6a8911ef6af  CVE-2025-24928.patch
-d00aafe4ae1a9f30fea22058c640932e6ce4df295c42c21f099743a79e05c22ad82f5cb3e7f5bbb46ef1c8762faa2699e3afcf53a073746ae51ac55aa70aae35  CVE-2025-27113.patch
+7bd04375321a99c9b7a82d6a72d9412ab45f958b923f1e2f75d9dfbb1a053eba3e0fd067a53753f9a343b4dcb2d9ab5cba894d4194a5f9fb7108f7c545224791  libxml2-2.12.10.tar.xz
 "
